--- a/pom.xml
+++ b/pom.xml
@@ -105,8 +105,13 @@
     </dependency>
     <dependency>
       <groupId>com.google.api-client</groupId>
-      <artifactId>google-api-client-appengine</artifactId>
-      <version>${project.appengine.client.version}</version>
+      <artifactId>google-api-client</artifactId>
+      <version>1.18.0-rc</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client-servlet</artifactId>
+      <version>1.18.0-rc</version>
     </dependency>
     <dependency>
       <groupId>net.sf.jsr107cache</groupId>
@@ -118,15 +123,15 @@
       <artifactId>google-http-client-jackson2</artifactId>
       <version>${project.http.version}</version>
     </dependency>
-    <dependency>
+<!--     <dependency>
       <groupId>com.google.appengine</groupId>
       <artifactId>appengine-api-1.0-sdk</artifactId>
       <version>${project.appengine.version}</version>
-    </dependency>
+    </dependency> -->
   </dependencies>
   <properties>
-    <project.appengine.version>1.8.3</project.appengine.version>
-    <project.appengine.client.version>1.17.0-rc</project.appengine.client.version>
+<!--     <project.appengine.version>1.8.3</project.appengine.version>
+    <project.appengine.client.version>1.17.0-rc</project.appengine.client.version> -->
     <project.http.version>1.17.0-rc</project.http.version>
     <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
