--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,7 +47,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
   <!-- The following ensures the user will be logged in to a Google Account by
     redirecting them to the sign-in page if not.
     For more information, see https://developers.google.com/appengine/docs/java/config/webxml -->
-  <security-constraint>
+<!--   <security-constraint>
     <web-resource-collection>
       <web-resource-name>any</web-resource-name>
       <url-pattern>/*</url-pattern>
@@ -55,6 +55,6 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
     <auth-constraint>
       <role-name>*</role-name>
     </auth-constraint>
-  </security-constraint>
+  </security-constraint> -->
 
 </web-app>
