--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
           <target>1.6</target>
         </configuration>
       </plugin>
-      <plugin>
+<!--       <plugin>
         <groupId>com.google.appengine</groupId>
         <artifactId>appengine-maven-plugin</artifactId>
         <version>${project.appengine.version}</version>
@@ -42,8 +42,8 @@
           <port>8888</port>
           <address>0.0.0.0</address>
         </configuration>
-      </plugin>
-      <plugin>
+      </plugin> -->
+<!--       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>2.1.1</version>
@@ -59,12 +59,24 @@
           <webappDirectory>${webappDirectory}</webappDirectory>
           <webxml>target/war/WEB-INF</webxml>
         </configuration>
-      </plugin>
+      </plugin> -->
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.1.1</version>
+				<configuration>
+					<warName>${artifactId}-${version}</warName>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>8.1.14.v20131031</version>
+			</plugin>
     </plugins>
-    <pluginManagement>
+<!--     <pluginManagement>
       <plugins>
-        <!--This plugin's configuration is used to store Eclipse m2e settings only.
-          It has no influence on the Maven build itself. -->
+        This plugin's configuration is used to store Eclipse m2e settings only.
+          It has no influence on the Maven build itself.
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
           <artifactId>lifecycle-mapping</artifactId>
@@ -90,7 +102,7 @@
           </configuration>
         </plugin>
       </plugins>
-    </pluginManagement>
+    </pluginManagement> -->
   </build>
   <dependencies>
 		<dependency>
