--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,15 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
     <servlet-name>RoomServlet</servlet-name>
     <url-pattern>/room</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>BookServlet</servlet-name>
+    <servlet-class>com.dianping.meetingboard.BookServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>BookServlet</servlet-name>
+    <url-pattern>/book</url-pattern>
+  </servlet-mapping>
 
   <welcome-file-list>
     <welcome-file>dianping-meetings-board</welcome-file>
